<resources>
    <string name="app_name">BlissAndroidChallenge</string>

    <string name="button_text">Random Emoji</string>
    <string name="button_text_list">Emoji List</string>
    <string name="button_text_list_avatar">Avatar List</string>
    <string name="button_text_googler">Google Repos</string>
    <string name="button_text_retryr">Retry</string>
    <string name="label_google_repo_activity">Google Repositories</string>
    <string name="label_list_avatar_activity">Avatars List</string>
    <string name="label_bliss_activity">Bliss Activity Challenge</string>

    <!-- Content Description -->
    <string name="image_main_content">Emoji Image</string>
    <string name="image_list_content">Emoji Image</string>
    <string name="image_avatar_content">Avatar Image</string>
</resources>