<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueDeep"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/ivEmoji"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/emp_icon"
        android:contentDescription="@string/image_main_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEmoji"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivEmoji" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEmojiList"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button_text_list"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@+id/btnEmoji"
        app:layout_constraintStart_toStartOf="@+id/btnEmoji"
        app:layout_constraintTop_toBottomOf="@id/btnEmoji" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
        app:layout_constraintStart_toStartOf="@+id/btnEmojiList"
        app:layout_constraintTop_toBottomOf="@+id/btnEmojiList" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSearch"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:drawableEnd="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@+id/editSearch"
        app:layout_constraintEnd_toEndOf="@+id/btnEmojiList"
        app:layout_constraintTop_toTopOf="@+id/editSearch" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAvatarList"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_text_list_avatar"
        app:layout_constraintEnd_toEndOf="@+id/btnEmoji"
        app:layout_constraintStart_toStartOf="@+id/btnEmoji"
        app:layout_constraintTop_toBottomOf="@+id/editSearch" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoogleRepos"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_text_googler"
        app:layout_constraintEnd_toEndOf="@+id/btnEmoji"
        app:layout_constraintStart_toStartOf="@+id/btnEmoji"
        app:layout_constraintTop_toBottomOf="@+id/btnAvatarList" />

</androidx.constraintlayout.widget.ConstraintLayout>